--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,17 +6,17 @@ services:
             - moodle_data:/var/lib/mysql 
         restart: always 
         environment: 
-            MYSQL_ROOT_PASSWORD: m00dle 
+            MYSQL_ROOT_PASSWORD: moodle 
             MYSQL_DATABASE: moodle 
             MYSQL_USER: moodle 
-            MYSQL_PASSWORD: m00dle 
+            MYSQL_PASSWORD: moodle 
         networks: 
             - moodle 
  
     app: 
         depends_on: 
             - db 
-        image: prasta/moodle:latest 
+        image: gilangvperdana/moodle
         ports: 
             - "80:80" 
         restart: always 
