--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,17 @@
-version: '3' 
+version: '3'
+
 services: 
-    db: 
-        image: mariadb:latest 
-        volumes: 
-            - moodle_data:/var/lib/mysql 
-        restart: always 
-        environment: 
-            MYSQL_ROOT_PASSWORD: moodle 
-            MYSQL_DATABASE: moodle 
-            MYSQL_USER: moodle 
-            MYSQL_PASSWORD: moodle 
-        networks: 
-            - moodle 
  
-    app: 
-        depends_on: 
-            - db 
+    app:
         image: gilangvperdana/moodle
         ports: 
-            - "80:80" 
+            - "9992:80" 
         restart: always 
         networks: 
-            - moodle 
+            - web
+        volumes:
+            - "./data/moodledata:/var/www/html/moodledata"
  
-volumes: 
-    moodle_data: 
- 
-networks: 
-    moodle:
+networks:
+  web:
+    external: true
